# ghc-xcode

./: LICENSE  Main.hs  README.md  ghc-xcode.cabal
